rproxy-nginx.yaml
apiVersion: v1
kind: Template
metadata:  
  name: rproxy-nginx
objects:
- apiVersion: v1
  kind: PersistentVolumeClaim
  metadata:
    name: rproxy-cache
  spec:
    accessModes:
      - ReadWriteOnce
    resources:
      requests:
        storage: 1Gi
  status: {}
- apiVersion: v1
  kind: DeploymentConfig
  metadata:
    generation: 1
    labels:
      run: rproxy-nginx
      name: rproxy-nginx
  spec:
    replicas: 1
    selector:
      run: rproxy-nginx
    strategy:
      resources:
        requests:
          cpu: 20m
          memory: 20Mi
        limits:
          cpu: 200m
          memory: 200Mi
      rollingParams:
        intervalSeconds: 1
        maxSurge: 25%
        maxUnavailable: 25%
        timeoutSeconds: 600
        updatePeriodSeconds: 1
      type: Rolling
    template:
      metadata:
        labels:
          run: rproxy-nginx
      spec:
        containers:
        - image: registry.centos.org/kbsingh/openshift-nginx:latest
          imagePullPolicy: Always
          name: rproxy-nginx
          ports:
          - containerPort: 8080
            protocol: TCP
          terminationMessagePath: /dev/termination-log
          volumeMounts:
          - mountPath: /etc/nginx/nginx.conf
            subPath: nginx.conf 
            name: configmap-volume
          - mountPath: /var/cache/nginx
            name: volume-nginx-cache
        volumes:
        - name: configmap-volume
          configMap:
            name: rproxy-nginx
        - name: volume-nginx-cache
          persistentVolumeClaim:
            claimName: rproxy-cache
        dxnsPolics: ClusterFirst
        restartPolicy: Always
        securityContext: {}
        terminationGracePeriodSeconds: 30
    test: false
    triggers:
    - type: ConfigChange
  status: {}
- apiVersion: v1
  kind: Service
  metadata:
    name: rproxy-nginx
    annotations:
  spec:
    ports:
    - name: "8080"
      port: 8080
      protocol: TCP
      targetPort: 8080
    selector:
      run: rproxy-nginx
    sessionAffinity: None
    type: ClusterIP
  status:
    loadBalancer: {}
- apiVersion: v1
  kind: Route
  metadata: 
    name: rproxy-nginx
  spec:
    to:
      kind: Service
      name: rproxy-nginx
      weight: 100
    wildcardPolicy: None
  status: {}
- kind: ConfigMap
  apiVersion: v1
  metadata:
    name: rproxy-nginx
  data:
    nginx.conf: |-
      [...]
